# rust-analyzer

crates/statistics/: Cargo.toml
crates/statistics/src/: main.rs
