[package]
name = "statistics"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "statistics"
path = "src/main.rs"

[dependencies]
ide.workspace = true
syntax.workspace = true
span.workspace = true
clap = "4.5.4"
regex = "1.10.4"
log = "*"
env_logger = "*"
toml = "*"


[lints]
workspace = true
